<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="error">Произошла ошибка, повторная загрузка через 5 секунд</string>
	<string name="value_error">Неправильно заполнено поле</string>
	<string name="chooseRoom">Выбрать номер</string>
	<string name="from">от</string>
	<string name="more_info">Подробнее о номере</string>
	<string name="booking_title">Бронирование</string>
	<string name="button_pay">Оплатить</string>
	<string name="buyer_info_label">Информация о покупателе</string>
	<string name="name">Имя</string>
	<string name="telephone">Номер телефона</string>
	<string name="email">Почта</string>
	<string name="data_help">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
	<string name="addLabel">Добавить туриста</string>
	<string name="payment_tour_label">Тур</string>
	<string name="payment_fuel_label">Топливный сбор</string>
	<string name="payment_service_label">Сервисный сбор</string>
	<string name="payment_total_label">К оплате</string>
	<string name="fly_from_label">Вылет из</string>
	<string name="fly_city_label">Страна, город</string>
	<string name="fly_date_label">Даты</string>
	<string name="fly_days_label">Кол-во ночей</string>
	<string name="fly_hotel_label">Отель</string>
	<string name="fly_room_label">Номер</string>
	<string name="fly_eating_label">Питание</string>
	<string name="tourist">турист</string>
	<string name="surname">Фамилия</string>
	<string name="birthday">Дата рождения</string>
	<string name="residency">Гражданство</string>
	<string name="passportDate">Срок действия загранпаспорта</string>
	<string name="passport">Номер загранпаспорта</string>
	<string name="validators_error_empty">Поля заполнены неправильно</string>
</resources>