<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:padding="15dp"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/name_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:background="@color/surface"
		android:hint="@string/name"
		app:layout_constraintTop_toBottomOf="@id/buyer_info_label">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:maxLines="1" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/surname_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:background="@color/surface"
		android:hint="@string/surname"
		app:layout_constraintTop_toBottomOf="@id/buyer_info_label">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/surname"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:maxLines="1" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/birthday_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:background="@color/surface"
		android:hint="@string/birthday"
		app:layout_constraintTop_toBottomOf="@id/buyer_info_label">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/birthday"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="date"
			android:maxLines="1" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/residency_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:background="@color/surface"
		android:hint="@string/residency"
		app:layout_constraintTop_toBottomOf="@id/buyer_info_label">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/residency"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:maxLines="1" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/passport_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:background="@color/surface"
		android:hint="@string/passport"
		app:layout_constraintTop_toBottomOf="@id/buyer_info_label">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/passport"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:maxLines="1" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/passportDate_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:background="@color/surface"
		android:hint="@string/passportDate"
		app:layout_constraintTop_toBottomOf="@id/buyer_info_label">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/passportDate"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="date"
			android:maxLines="1" />
	</com.google.android.material.textfield.TextInputLayout>

</LinearLayout>