<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/surface">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/app_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/white"
			android:maxHeight="100dp"
			android:padding="10dp"
			app:layout_constraintTop_toTopOf="parent">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<ImageView
					android:id="@+id/button_back"
					android:layout_width="32dp"
					android:layout_height="32dp"
					android:paddingStart="15dp"
					android:scaleType="center"
					android:src="@drawable/ic_arrow_back"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/hotel_text"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_marginHorizontal="10dp"
					android:gravity="center"
					android:text="@string/booking_title"
					android:textColor="@color/black"
					android:textSize="18sp"
					android:textStyle="bold"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toEndOf="@id/button_back"
					app:layout_constraintTop_toTopOf="parent" />
			</androidx.constraintlayout.widget.ConstraintLayout>
		</com.google.android.material.appbar.AppBarLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/hotel_info_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:background="@drawable/round_corners"
			android:padding="10dp"
			app:layout_constraintTop_toBottomOf="@id/app_bar">

			<LinearLayout
				android:id="@+id/rating_layout"
				android:layout_width="wrap_content"
				android:layout_height="30dp"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:padding="5dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">

				<ImageView
					android:id="@+id/star"
					android:layout_width="15dp"
					android:layout_height="15dp"
					android:src="@drawable/ic_star" />

				<TextView
					android:id="@+id/hotel_rating"
					style="@style/BasicTextAppearance"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="5dp"
					android:maxEms="1"
					tools:text="5" />

				<TextView
					android:id="@+id/hotel_rating_name"
					style="@style/BasicTextAppearance"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					tools:text="Превосходно!" />

			</LinearLayout>


			<TextView
				android:id="@+id/hotel_name"
				style="@style/LabelAppearance"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/rating_layout"
				tools:text="Steigenberger Makadi" />

			<TextView
				android:id="@+id/hotel_address"
				style="@style/LabelSubTextAppearance"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:textColor="@color/blue"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/hotel_name"
				tools:text="Madinat Makadi, Safaga Road, Makadi Bay, Египет" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/booking_base_info_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:background="@drawable/round_corners"
			android:padding="15dp"
			app:layout_constraintTop_toBottomOf="@id/hotel_info_layout">

			<TextView
				android:id="@+id/fly_from_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/fly_from_label"
				app:layout_constraintEnd_toStartOf="@id/fly_from_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/fly_from_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="@id/fly_from_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/fly_from_label"
				app:layout_constraintTop_toTopOf="@id/fly_from_label" />

			<TextView
				android:id="@+id/fly_city_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/fly_city_label"
				app:layout_constraintEnd_toStartOf="@id/fly_city_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/fly_from_label" />

			<TextView
				android:id="@+id/fly_city_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="@id/fly_city_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/fly_city_label"
				app:layout_constraintTop_toTopOf="@id/fly_city_label" />

			<TextView
				android:id="@+id/fly_date_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/fly_date_label"
				app:layout_constraintEnd_toStartOf="@id/fly_date_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/fly_city_label" />

			<TextView
				android:id="@+id/fly_date_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="@id/fly_date_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/fly_date_label"
				app:layout_constraintTop_toTopOf="@id/fly_date_label" />

			<TextView
				android:id="@+id/fly_days_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/fly_days_label"
				app:layout_constraintEnd_toStartOf="@id/fly_days_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/fly_date_label" />

			<TextView
				android:id="@+id/fly_days_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="@id/fly_days_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/fly_days_label"
				app:layout_constraintTop_toTopOf="@id/fly_days_label" />

			<TextView
				android:id="@+id/fly_hotel_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/fly_hotel_label"
				app:layout_constraintEnd_toStartOf="@id/fly_hotel_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/fly_days_label" />

			<TextView
				android:id="@+id/fly_hotel_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="@id/fly_hotel_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/fly_hotel_label"
				app:layout_constraintTop_toTopOf="@id/fly_hotel_label" />

			<TextView
				android:id="@+id/fly_room_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/fly_room_label"
				app:layout_constraintEnd_toStartOf="@id/fly_room_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/fly_hotel_label" />

			<TextView
				android:id="@+id/fly_room_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="@id/fly_room_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/fly_room_label"
				app:layout_constraintTop_toTopOf="@id/fly_room_label" />

			<TextView
				android:id="@+id/fly_eating_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/fly_eating_label"
				app:layout_constraintEnd_toStartOf="@id/fly_eating_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/fly_room_label" />

			<TextView
				android:id="@+id/fly_eating_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="@id/fly_eating_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/fly_eating_label"
				app:layout_constraintTop_toTopOf="@id/fly_eating_label" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/buyer_info_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:background="@drawable/round_corners"
			android:padding="15dp"
			app:layout_constraintTop_toBottomOf="@id/booking_base_info_layout">

			<TextView
				android:id="@+id/buyer_info_label"
				style="@style/LabelAppearance"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/buyer_info_label"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />


			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/telephone_layout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:background="@color/surface"
				android:hint="@string/telephone"
				app:layout_constraintTop_toBottomOf="@id/buyer_info_label">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/telephone"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="phone"
					android:maxLines="1" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/email_layout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:background="@color/surface"
				android:hint="@string/email"
				app:layout_constraintTop_toBottomOf="@id/telephone_layout">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textEmailAddress"
					android:maxLines="1" />
			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/data_help"
				app:layout_constraintTop_toBottomOf="@id/email_layout" />

		</androidx.constraintlayout.widget.ConstraintLayout>


		<pokercc.android.expandablerecyclerview.ExpandableRecyclerView
			android:id="@+id/tourists_rv"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="5dp"
			android:background="@drawable/round_corners"
			app:layout_constraintTop_toBottomOf="@id/buyer_info_layout" />


		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/addTouristsLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:background="@drawable/round_corners"
			android:padding="15dp"
			app:layout_constraintTop_toBottomOf="@id/tourists_rv">

			<TextView
				android:id="@+id/addLabel"
				style="@style/LabelAppearance"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/addLabel"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@id/buttonAddTourist"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/buttonAddTourist"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/round_corners"
				android:backgroundTint="@color/blue"
				android:padding="3dp"
				android:src="@drawable/ic_add"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/addLabel"
				app:layout_constraintTop_toTopOf="parent" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/payment_info_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:background="@drawable/round_corners"
			android:padding="15dp"
			app:layout_constraintTop_toBottomOf="@id/addTouristsLayout">

			<TextView
				android:id="@+id/payment_tour_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/payment_tour_label"
				app:layout_constraintEnd_toStartOf="@id/payment_tour_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/payment_tour_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:gravity="end"
				android:textColor="@color/black"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="@id/payment_tour_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/payment_tour_label"
				app:layout_constraintTop_toTopOf="@id/payment_tour_label" />

			<TextView
				android:id="@+id/payment_fuel_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/payment_fuel_label"
				app:layout_constraintEnd_toStartOf="@id/payment_fuel_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/payment_tour_label" />

			<TextView
				android:id="@+id/payment_fuel_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:gravity="end"
				android:textColor="@color/black"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="@id/payment_fuel_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/payment_fuel_label"
				app:layout_constraintTop_toTopOf="@id/payment_fuel_label" />

			<TextView
				android:id="@+id/payment_service_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/payment_service_label"
				app:layout_constraintEnd_toStartOf="@id/payment_service_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/payment_fuel_label" />

			<TextView
				android:id="@+id/payment_service_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:gravity="end"
				android:textColor="@color/black"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="@id/payment_service_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/payment_service_label"
				app:layout_constraintTop_toTopOf="@id/payment_service_label" />

			<TextView
				android:id="@+id/payment_total_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/payment_total_label"
				app:layout_constraintEnd_toStartOf="@id/payment_total_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/payment_service_label" />

			<TextView
				android:id="@+id/payment_total_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:gravity="end"
				android:textColor="@color/blue"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="@id/payment_total_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/payment_total_label"
				app:layout_constraintTop_toTopOf="@id/payment_total_label" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/buttonPanel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="3dp"
			android:layout_weight="1"
			android:background="@color/white"
			android:padding="10dp"
			app:layout_constraintTop_toBottomOf="@id/payment_info_layout">

			<Button
				android:id="@+id/navigateToPayment"
				style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:backgroundTint="@color/blue"
				android:text="@string/button_pay"
				android:textAllCaps="false"
				app:background="@null"
				app:layout_constraintBottom_toBottomOf="parent" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>